--- a/series-signature-logo.html
+++ b/series-signature-logo.html
@@ -73,6 +73,27 @@ nav a:hover{opacity:1}
   color:var(--muted);
   font-size:11px;
 }
+/* TAG */
+.tag{
+  position:absolute;
+  top:10px;
+  left:10px;
+  font-size:10px;
+  letter-spacing:1px;
+  padding:4px 6px;
+  background:#fff;
+  color:#000;
+}
+
+.tag.sold{
+  background:#000;
+  color:#fff;
+  border:1px solid #fff;
+}
+
+.item{
+  position:relative;
+}
 
 /* ORDER */
 .order{
