--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@ footer{
 <body>
 
 <header>
-  <div class="logo">UNBOUND X</div>
+  <div class="logo"><img src="assets/images/logo.png">
+</div>
   <nav>
     <a href="products.html">COLLECTIONS</a>
     <a href="series-july-2025.html">NEW</a>
