--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>UNBOUND X</title>
+<title>UNBOUND-X</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <style>
