--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@ footer{
 <body>
 
 <header>
-  <div class="logo"><img src="assets/images/logo.png">
+<a href="index.html" class="logo">
+  <img src="assets/images/logo.png" alt="UNBOUND X">
+</a>
 </div>
   <nav>
     <a href="products.html">COLLECTIONS</a>
