--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@ footer{
 <a href="index.html" class="logo">
   <img src="assets/images/logo.png" alt="UNBOUND X">
 </a>
+  .logo img{
+  height:28px;
+  width:auto;
+  display:block;
+}
+
 </div>
   <nav>
     <a href="products.html">COLLECTIONS</a>
